# randpaper

./: .gitignore  Cargo.toml  README.md  flake.nix  result
src/: cli.rs  core.rs  daemon.rs  daemon_lock.rs  hyprland.rs  hyprpaper.rs  lib.rs  main.rs  sway.rs  theme.rs  traits.rs  wallpaper.rs
src/backends/: hyprland.rs  sway.rs  sway.rs.bak
src/daemon/: mod.rs
src/daemon/render/: awww.rs  mod.rs  swaybg.rs  swww.rs
