[package]
name = "randpaper"
version = "0.1.0"
edition = "2024"
description = "Sets a different random wallpaper per monitor every N minutes"
readme = "README.md"
license = "MIT"
repository = "https://github.com/saylesss88/randpaper"
homepage = "https://github.com/saylesss88/randpaper"
keywords = ["rust", "wallpaper"]
categories = ["command-line-utilities"]
exclude = [
	".github",
	".gitignore",
	"flake",
	"flake.lock",
	"flake.nix",
	"result",
	"rustfmt.toml",
]

[dependencies]
anyhow = "1.0.101"
clap = {version = "4.5.57", features = ["derive"]}
log = "0.4.29"
parse_duration = "2.1.1"
rand = "0.10.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
swayipc-async = "3.0.0"
swayipc-types = "2.0.1"
tokio = {version = "1.49.0", features = ["full"]}
walkdir = "2.5.0"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
